--- a/activity_tracker/app/views/home/index.html.erb
+++ b/activity_tracker/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 			</div>
 			<div "col-md-14">
 				<p>
-					<%= link_to "Administrator", "adminstrator" %>
+					<%= link_to "Administrator", new_admin_session_path %>
 				</p>
 			</div>
 		</div>
