--- a/activity_tracker/app/views/patients/show.html.erb
+++ b/activity_tracker/app/views/patients/show.html.erb
@@ -1,6 +1,7 @@
 <div class="contents row">
-	<p> Hello ! <%= @current_user.email %><br>
-		This is your name -> <%= @current_user.name %><br>
+	<h2>Welcome!</h2>
+	<p>Hello <%= @current_user.name %>!<br>
+		This is your email -> <%= @current_user.name %><br>
 		This is your DOB -> <%= @current_user.dob %><br>
 		This is your MRN -> <%= @current_user.mrn %>
 	</p>
