--- a/activity_tracker/app/views/patients/authorize.html.erb
+++ b/activity_tracker/app/views/patients/authorize.html.erb
@@ -1,12 +1,14 @@
 <div class="contents row">
 	<h2>Register your Account with Mobile Apps!</h2>
-	<p>Hello <%= @current_user.name %>!<br>
-		This is your medical number -> <%= @current_user.mrn %><br>
-
-		<%= link_to 'Register your Withings Account with Activity Tracker',@authorization_url %>
-
-
+	<p>Hello <%= @current_user.name %>!<br><br>
+    <table class="table" style="width:100%">
+      <tr>
+        <th><%= "Withings" %></th>
+        <td><%= link_to 'Authorize Activity Tracker to access Withings', @authorization_url %>
+      </tr>
+    </table>
 	</p>
+</br>
 
 <%= link_to 'Log out', destroy_patient_session_path, :method => :delete %>
 
