--- a/activity_tracker/app/views/patients/show.html.erb
+++ b/activity_tracker/app/views/patients/show.html.erb
@@ -1,26 +1,33 @@
 <div class="contents row">
-	<h2>Welcome!</h2>
-	<p>Hello <%= @current_user.name %>!<br>
-		This is your email -> <%= @current_user.name %><br>
-		This is your DOB -> <%= @current_user.dob %><br>
-		This is your MRN -> <%= @current_user.mrn %><br>
-
-		This is your token key -> <%= @current_user.withings_token_key %><br>
-		This is your token secret -> <%= @current_user.withings_token_secret %><br>
-		This is your user id -> <%= @current_user.withings_id %><br>
-<br>
-<br>
-		This is your daily activity: <br>
-
-
-		<%= link_to 'See your activity', activity_path %><br>
-
-
-
-		<%= link_to 'Register your account with mobile apps', authorize_path %>
-	</p>
-
-	<%= link_to 'Edit', edit_patient_registration_path(@current_user)%>
+	<h1>Hello <%= @current_user.name %>!</h1>
+	<br>
+    <table id="individual_patient" style="width:100%">
+      <tr>
+        <th id="individual_patient" ><%= "Email" %></th>
+        <td><%= @current_user.email %></td>
+      </tr>
+      <tr>
+        <th id="individual_patient"><%= "DOB" %></th>
+        <td><%= @current_user.dob %></td>
+      </tr>
+      <tr>
+        <th id="individual_patient"><%= "MRN" %></th>
+        <td><%= @current_user.mrn %></td>        
+      </tr>
+      <tr>
+        <th id="individual_patient"><%= "Authorized Apps" %></th>
+        <td>
+          <% if @current_user.withings_authorized then %>
+            <%= link_to 'Withings', activity_path %><br>
+          <% else %>
+            None
+          <% end %>
+        </td>        
+      </tr>
+    </table>
+		<br>
+	<%= link_to 'Register your account with mobile apps', authorize_path %> <br>
+	<%= link_to 'Edit your profile', edit_patient_registration_path(@current_user)%> <br>
 	<%= link_to 'Log out', destroy_patient_session_path, :method => :delete %>
 
 </div>
