--- a/activity_tracker/app/assets/stylesheets/style.css
+++ b/activity_tracker/app/assets/stylesheets/style.css
@@ -6,19 +6,6 @@ $gray: #D8D8D8;
 $lightGray: #f5f5f3;
 $white: white;
 
-//mixin
-
-@mixin boxBase($margin: 30px auto, $padding: 10px) {
-  margin: $margin;
-  padding: $padding;
-}
-@mixin basePadding($padding: 10px) {
-  padding: $padding;
-}
-@mixin baseMargin($margin: 10px auto) {
-  margin: $margin;
-}
-
 body,html {
   height: 100%;
   background-color: $lightGray;
@@ -26,6 +13,7 @@ body,html {
 
 body {
   padding-top: 60px;
+  padding-bottom: 70px;
 }
 
 h1,h2,h3,h4,h5,h6,body {
@@ -36,14 +24,6 @@ h1,h2,h3,h4,h5,h6,body {
   margin: 0;
 }
 
-a {
-  text-decoration: none;
-  color: $dark;
-  @extend .transition;
-  &:hover {
-    color: $accent;
-  }
-}
 
 .bold {
   font-weight: bold;
@@ -60,14 +40,7 @@ a {
   background: $gray;
 }
 
-.transition {
-  @include transition-property(all);
-  @include transition-duration(0.2s);
-  @include transition-timing-function(linear);
-}
-
 .btn {
-    @include basePadding(8px 20px);
     font-size: 14px;
     border: 2px solid $accent;
     color: $accent;
@@ -96,7 +69,6 @@ a {
 
 
 header.header {
-  @include basePadding;
   border-bottom: 1px solid $gray;
   background-color: #fff;
   position: fixed;
@@ -189,7 +161,6 @@ header.header {
 }
 div.contents.row {
   h2 {
-    @include boxBase(20px 0, 0);
     font-weight: normal;
     strong {
       font-weight: bold;
@@ -200,7 +171,6 @@ div.contents.row {
   .new_user{
   }
   div.content_post {
-    @include boxBase(20px 0 ,30px);
     position: relative;
     height: 400px;
     color: #fff;
@@ -215,8 +185,6 @@ div.contents.row {
       bottom: 0;
       left: 0;
       right: 0;
-      @include filter-gradient(#000000, #a60000, vertical);
-      @include background-image(linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 62%,rgba(0,0,0,0.85) 100%));
       z-index: 1;
       border-radius: 3px;
     }
@@ -260,7 +228,6 @@ div.contents.row {
       }
     }
     p {
-      @extend .serif;
       position: absolute;
       left: 30px;
       right: 100px;
@@ -292,13 +259,11 @@ div.contents.row {
     }
   }
   form {
-    @include boxBase(20px 0 ,30px);
     box-shadow: 0 0 10px rgba($black,0.2);
     background-color: $white;
     box-sizing: border-box;
 
     h3 {
-      @include baseMargin(0 0 20px);
       text-align: center;
       font-weight: normal;
       font-size: 20px;
@@ -306,12 +271,10 @@ div.contents.row {
     }
     input,textarea {
       width: 100%;
-      @include boxBase(5px 0 15px,10px);
       border: 1px solid $gray;
       border-radius: 5px;
     }
     input[type="submit"] {
-      @extend .transition;
       background-color: $accent;
       border-radius: 20px;
       color: #fff;
@@ -323,18 +286,13 @@ div.contents.row {
     }
   }
   .success {
-    @include boxBase(20px 0 ,30px);
     box-shadow: 0 0 10px rgba($black,0.2);
     background-color: $white;
     box-sizing: border-box;
     text-align: center;
-    h3 {
-      @include baseMargin;
-    }
   }
 }
 footer {
-  @include boxBase;
   color: $gray;
       text-align: center;
 }
