--- a/activity_tracker/app/views/patients/activity.html.erb
+++ b/activity_tracker/app/views/patients/activity.html.erb
@@ -1,4 +1,3 @@
-
 <div style="text-align: center">
 <h1><%= @current_user.name %>'s Withings Activity from <%= @startdateymd %> to <%= @enddateymd %>.</h1></br>
 	<%= form_tag activity_path(@current_user), :method => :get do %>
@@ -44,7 +43,79 @@
 	      <% end %>
 	    </tbody>
 	  </table>
+<br>
+	<%= button_to "Refresh table", activity_path, params:{:startdateymd => @startdateymd, :enddateymd => @enddateymd}, method: :get%>
+<br>
 
+This is weight:
+<br>
 
+	  <table id="activity_table" align="center">
+	    <thead>
+	      <tr>
+	        <th scope="col">Date</th>
+	        <th scope="col">Weight</th>
+	      </tr>
+	    </thead>
+
+	    <tbody>
+	      <% @weight.each do |data| %>
+	      <% date_parts = data.to_s.split(',').last.split("taken at: ").last.chomp(")]").split(/[\s.:]+/).map(&:to_i) %>
+	      <% date = DateTime.civil(date_parts[2], date_parts[1], date_parts[0], date_parts[3], date_parts[4], date_parts[5], 0).to_s(:db) %>
+	        <tr>
+	          <th scope="row" class="spec"><%= date %></td>
+	          <td class="col-md-1"><%= (data.to_s.split(',').first.split(': ')[1].to_f * 2.20462).round(3) %> pounds </td>
+	        </tr>
+	      <% end %>
+	    </tbody>
+	  </table>
+
+<br>
+This is height:
+<br>
+
+	  <table id="activity_table" align="center">
+	    <thead>
+	      <tr>
+	        <th scope="col">Date</th>
+	        <th scope="col">Height</th>
+	      </tr>
+	    </thead>
+
+	    <tbody>
+	      <% @height.each do |data| %>
+	      <% date_parts = data.to_s.split(',').last.split("taken at: ").last.chomp(")]").split(/[\s.:]+/).map(&:to_i) %>
+	      <% date = DateTime.civil(date_parts[2], date_parts[1], date_parts[0], date_parts[3], date_parts[4], date_parts[5], 0).to_s(:db) %>
+	        <tr>
+	          <th scope="row" class="spec"><%= date%></td>
+	          <td class="col-md-1"><%= (data.to_s.split(',').third.split(': ')[1].to_f * 3.28084).round(3) %> feet </td>
+	        </tr>
+	      <% end %>
+	    </tbody>
+	  </table>
+
+<br>
+This is heart rate:
+<br>
+
+	  <table id="activity_table" align="center">
+	    <thead>
+	      <tr>
+	        <th scope="col">Date</th>
+	        <th scope="col">Heart Rate</th>
+	      </tr>
+	    </thead>
+
+	    <tbody>
+	      <% @heart_rate.each do |data| %>
+	      <% date_parts = data.to_s.split(',').last.split("taken at: ").last.chomp(")]").split(/[\s.:]+/).map(&:to_i) %>
+	      <% date = DateTime.civil(date_parts[2], date_parts[1], date_parts[0], date_parts[3], date_parts[4], date_parts[5], 0).to_s(:db) %>
+	        <tr>
+	          <th scope="row" class="spec"><%= date %></td>
+	          <td class="col-md-1"><%= data.to_s.split(',')[5].split(': ')[1][/\d+/] %> bpm </td>
+	        </tr>
+	      <% end %>
+	    </tbody>
+	  </table>
 
 </div>
