--- a/activity_tracker/app/views/patients/authorize.html.erb
+++ b/activity_tracker/app/views/patients/authorize.html.erb
@@ -4,8 +4,13 @@
     <table class="table" style="width:100%">
       <tr>
         <th><%= "Withings" %></th>
-        <td><%= link_to 'Authorize Activity Tracker to access Withings', @authorization_url %>
+        <td><%= link_to 'Authorize Activity Tracker to access Withings', @withings_authorization_url %>
       </tr>
+      <tr>
+        <th><%= "Moves" %></th>
+        <td><%= link_to 'Authorize Activity Tracker to access Moves', @moves_authorization_url %>
+      </tr>
+
     </table>
 	</p>
 </br>
