--- a/activity_tracker/app/views/patients/withings_activity.html.erb
+++ b/activity_tracker/app/views/patients/withings_activity.html.erb
@@ -58,7 +58,7 @@
 	</thead>
 	    <tbody>
 	    	<tr>
-	    		<th>
+	    		<th valign="top">
 	    			  <table id="activity_table">
 					    <thead>
 					      <tr>
