--- a/activity_tracker/app/views/admins/index.html.erb
+++ b/activity_tracker/app/views/admins/index.html.erb
@@ -22,7 +22,7 @@
 	          <td id="user_table" class="col-md-1"><%= patient.mrn %></td>
 			  <td id="user_table" class="col-md-1">
 			  	<% if patient.withings_authorized and patient.moves_authorized %>
-			  		<%= link_to 'Withings', "/patients/" + patient.id.to_s + "/withings_activity" %></td>
+			  		<%= link_to 'Withings', "/patients/" + patient.id.to_s + "/withings_activity" %> <br>
 			  		<%= link_to 'Moves', "/patients/" + patient.id.to_s + "/moves_activity" %></td>
 			  	<% elsif patient.withings_authorized %>
 			  		<%= link_to 'Withings', "/patients/" + patient.id.to_s + "/withings_activity" %></td>
