Got Fitbit working

--- a/activity_tracker/app/views/patients/authorize.html.erb
+++ b/activity_tracker/app/views/patients/authorize.html.erb
@@ -10,6 +10,10 @@
         <th><%= "Moves" %></th>
         <td><%= link_to 'Authorize Activity Tracker to access Moves', @moves_authorization_url %>
       </tr>
+      <tr>
+        <th><%= "Fitbit" %></th>
+        <td><%= link_to 'Authorize Activity Tracker to access Fitbit', @fitbit_authorization_url %>
+      </tr>
 
     </table>
 	</p>
