--- a/activity_tracker/app/views/admins/index.html.erb
+++ b/activity_tracker/app/views/admins/index.html.erb
@@ -21,15 +21,14 @@
 	          <td id="user_table" class="col-md-1"><%= patient.dob %></td>
 	          <td id="user_table" class="col-md-1"><%= patient.mrn %></td>
 			  <td id="user_table" class="col-md-1">
-			  	<% if patient.withings_authorized and patient.moves_authorized %>
-			  		<%= link_to 'Withings', "/patients/" + patient.id.to_s + "/withings_activity" %> <br>
-			  		<%= link_to 'Moves', "/patients/" + patient.id.to_s + "/moves_activity" %></td>
-			  	<% elsif patient.withings_authorized %>
-			  		<%= link_to 'Withings', "/patients/" + patient.id.to_s + "/withings_activity" %></td>
-			  	<% elsif patient.moves_authorized %>
-			  		<%= link_to 'Moves', "/patients/" + patient.id.to_s + "/moves_activity" %></td>
-			  	<% else %>
-			  		None
+			  	<% if patient.withings_authorized %>
+			  		<%= link_to 'Withings', "/patients/" + patient.id.to_s + "/withings_activity" %><br>
+			  	<% end %>
+			  	<% if patient.moves_authorized %>
+			  		<%= link_to 'Moves', "/patients/" + patient.id.to_s + "/moves_activity" %><br>
+			  	<% end %>
+			  	<% if patient.fitbit_authorized %>
+			  		<%= link_to 'Fitbit', "/patients/" + patient.id.to_s + "/fitbit_activity" %>
 			  	<% end %>
 			  </td>
 			  <td id="user_table" class="col-md-1"><%= link_to 'Remove Patient', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
