--- a/activity_tracker/app/views/patients/moves_activity.html.erb
+++ b/activity_tracker/app/views/patients/moves_activity.html.erb
@@ -3,11 +3,11 @@
 <h1><%= @current_user.name %>'s Moves Activity from <%= @startdateymd %> to <%= @enddateymd %>.</h1></br>
 	<%= form_tag moves_activity_path(@current_user), :method => :get do %>
 
-		<% if @errors %>
+		<% if @error %>
 			<font color= "red">
 			  	<div id="error_explanation">
 					<ul>
-						<%= @errors%>
+						<%= @error %>
 					</ul>
 				</div>
 			</font>
@@ -36,6 +36,7 @@
 	    </thead>
 
 	    <tbody>
+	    <% if @formatted_parsed_data != nil %>
 	      <% @formatted_parsed_data.each do |data| %>
 	        <tr>
 	          <th scope="row" class="spec"><%= data["date"] %></th>
@@ -76,6 +77,7 @@
 	          </td>
 	        </tr>
 	      <% end %>
+	    <% end %>
 	    </tbody>
 	  </table>
 
