Incorporated Bootstrap buttons and navibar

--- a/activity_tracker/app/views/home/index.html.erb
+++ b/activity_tracker/app/views/home/index.html.erb
@@ -1,15 +1,29 @@
+
 <div style="text-align: center">
 	<div class="col-md-12">
-		<h1>Welcome!  I am a... </h1>
+	</br>
+	</br>
+		<h1 style="font-size:35px">Welcome!  I am a... </h1>
+		</br>
+		</br>
+		</br>
+
 		<div class="row">
 			<div "col-md-12">
 				<p>
-					<%= link_to "Patient", new_patient_session_path%>
+					<a class="btn btn-default btn-lg" style="font-size:20px" href="/patients/sign_in">
+						Patient
+					</a>
 				</p>
 			</div>
+			</br>
+			</br>
+
 			<div "col-md-12">
 				<p>
-					<%= link_to "Administrator", new_admin_session_path %>
+					<a class="btn btn-default btn-lg" style="font-size:20px" href="/admins/sign_in">
+						Administrator
+					</a>
 				</p>
 			</div>
 		</div>
